[package]
name = "egui_float_scroller"
version = "0.1.0"
edition = "2021"
authors = ["Rowan Fraser"]
description = "A fixed-size scrollbar widget for egui"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/egui-fixed-scrollbar"
documentation = "https://docs.rs/egui-fixed-scrollbar"
readme = "README.md"
keywords = ["egui", "gui", "scrollbar", "widget"]
categories = ["gui"]

[dependencies]
egui = "0.29.1"
eframe = "0.29.1"

[[example]]
name = "simple"
path = "examples/simple.rs"